fix style overlap

--- a/src/components/submittedApplications/SubmittedApplication.module.css
+++ b/src/components/submittedApplications/SubmittedApplication.module.css
@@ -187,12 +187,12 @@
   margin-bottom: 55px;
 }
 
-input[type='radio'] {
+.inputContainer > input[type='radio'] {
   opacity: 0;
   pointer-events: none;
 }
 
-input[type='radio']:checked + .radioCheckMark {
+.inputContainer > input[type='radio']:checked + .radioCheckMark {
   background: url('../../assets/images/radio-btn-active.png');
 }
 
